Fix app switcher hidden behind detail header

--- a/engine-wizard/scss/elements/_top-header.scss
+++ b/engine-wizard/scss/elements/_top-header.scss
@@ -7,7 +7,7 @@
     top: 0;
     left: $side-navigation-width;
     right: 0;
-    z-index: 1000;
+    z-index: 10;
 
     .top-header-content {
         background: $gray-100;
